<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/navigation_home"
        android:title="Home"
        android:icon="@drawable/home_icon" />

    <item
        android:id="@+id/navigation_tag"
        android:title="Tag"
        android:icon="@drawable/tag" />

    <item
        android:id="@+id/navigation_add"
        android:title="Add Item"
        android:icon="@drawable/plus" />

    <item
        android:id="@+id/navigation_profile"
        android:title="Profile"
        android:icon="@drawable/profile" />
</menu>
