...
        android:id="@+id/home_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/inventory_list_view"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/buttons_layout"
...
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone"> <!-- Set to gone initially -->

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="Delete" />

        <Button
...
